# Qosmetics

./: .clang-format  .gitignore  .gitmodules  Android.mk  AndroidTest.mk  Application.mk  CMakeLists.txt  CreateQmod.ps1  LICENSE  README.md  addr2line.ps1  bmbfmod.json  build.ps1  build1core.ps1  buildBMBF.ps1  buildQmod.ps1  copy.ps1  createqmod.ps1  filter.ps1  log.ps1  mod.json  mod.template.json  pullandanalyze.ps1  qbuild.json  qpm.json
.github/workflows/: build-ndk.yml  make-qmod.yml  publish.yml
ExtraFiles/: CreatorCache.json  Patreons.json  Patrons.json
ExtraFiles/IncludedItems/: DDR Arrows.qbloq  PC recreation + Rainbow Frames.qwall  PC recreation.qwall  Plasma Katana.qsaber  UWU Notes.qbloq
UnityProject/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  Qosmetics Unity Project.sln  UnityProject.sln
UnityProject/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
Wiki/: Qosmetics Bloqs.md  Qosmetics General.md  Qosmetics Sabers.md  Qosmetics Walls.md
include/: Config.hpp  ConfigRegister_Internal.hpp  FlowCoordinatorRegister_Internal.hpp  Logging.hpp  QosmeticsLogger.hpp  Redecoration.hpp  RedecorationRegister_Internal.hpp  TypeRegisterer.hpp  config.hpp  hooks.hpp  logging.hpp  sprites.hpp  static-defines.hpp
include/Config/: NoteConfig.hpp  SaberConfig.hpp  WallConfig.hpp
include/Containers/: FlowCoordinatorContainer.hpp  SingletonContainer.hpp
include/Data/: CreatorCache.hpp  CustomTrail.hpp  Descriptor.hpp  DescriptorCache.hpp  ModelLoader.hpp  ModelManager.hpp  ModelProvider.hpp  NoteData.hpp  PatreonStorage.hpp  PatronCache.hpp  Patrons.hpp  QosmeticItem.hpp  QosmeticsDescriptorCache.hpp  QosmeticsEvents.hpp  QosmeticsTrail.hpp  SaberData.hpp  WallData.hpp
include/Installers/: GameInstaller.hpp  UIInstaller.hpp
include/Logging/: GenericLogger.hpp  NoteLogger.hpp  SaberLogger.hpp  UILogger.hpp  WallLogger.hpp
include/Note/: NoteConfig.hpp  NoteItem.hpp  NoteManager.hpp
include/Qosmetic/: EventManager.hpp  QosmeticsColorManager.hpp  QosmeticsColorScheme.hpp  QuestNote.hpp  QuestSaber.hpp  QuestWall.hpp
include/Saber/: SaberConfig.hpp  SaberItem.hpp  SaberManager.hpp
include/Trail/: QosmeticsTrail.hpp  TrailConfig.hpp
include/UI/: CreditViewController.hpp  CreditsViewController.hpp  GameplaySetupView.hpp  MenuButtonClickData.hpp  NoteSwitcherViewController.hpp  ProfileSwitcherViewController.hpp  QosmeticsFlowCoordinator.hpp  QosmeticsSongSelectFlowCoordinator.hpp  QosmeticsViewController.hpp  SaberSwitcherViewController.hpp  WallSwitcherViewController.hpp  datastructs.hpp
shared/: AltTrail.hpp  ConfigRegister.hpp  FlowCoordinatorRegister.hpp  NoteAPI.hpp  QosmeticsAPI.hpp  QosmeticsColorSetting.hpp  RedecorationRegister.hpp  SaberAPI.hpp  TrailHelper.hpp  WallAPI.hpp
shared/Data/: Manifest.hpp  (+2 more)
src/: Config.cpp  FlowCoordinatorRegister.cpp  Logging.cpp  QosmeticsLogger.cpp  Redecoration.cpp  RedecorationRegister.cpp  TypeRegisterer.cpp  config.cpp  logging.cpp  main.cpp  test.cpp
(+292 files in other folders)
